# NV_ENC_CUDA

./: .gitignore  CMakeLists.txt  Makefile  Makefile.bak  NvEncoderCudaInterop  NvEncoderCudaInterop.cpp  NvEncoderCudaInterop.h  README.md  argb2nv12.cu  argb_nvcc.sh  cds_server_render_nvidia.h  output.h264  preproc.cu  rgb2nv12.cu  rgb_nvcc.sh  run.sh  tmaxos-egl.h
common/inc/: NvHWEncoder.h  dynlink_cudaGL.h
common/src/: NvHWEncoder.cpp  dynlink_cuda.cpp
data/: argb2nv12.ptx  rgb2nv12.ptx
